--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -27,7 +27,9 @@
 
   
   {% block js %}
-    
+  <script src="{% static 'js/jquery.min.js' %}"></script>
+  <script src="{% static 'js/popper.js' %}"></script>
+  <script src="{% static 'js/bootstrap.min.js' %}"></script>
   {% endblock js %}
     
 
