--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,9 +1,5 @@
-{% extends 'base/base.html' %}
-
 {% load static %}
-
-{% block nav %}
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a href="{%url 'index'%}" class="navbar-brand"> Trato Hecho
         <img src="{% static 'img/saludo_nav.png' %}" alt="" style="width: 50px; height: auto;"></a>
@@ -20,7 +16,7 @@
             <a class="nav-link" href="">Categorias</a>
           </li>
           <li class="nav">
-            <a class="nav-link" href="">Publicar</a>
+            <a class="nav-link" href="{% url 'create' %}">Publicar</a>
           </li>
         {% endif %}
         </ul>
@@ -47,13 +43,5 @@
       </div>
     </div>
   </nav>
-{% endblock %}
 
-
-{% block js %}
-  <script src="{% static 'js/jquery.min.js' %}"></script>
-  <script src="{% static 'js/popper.js' %}"></script>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-{% endblock js %}
-  
     
