--- a/templates/service/new.html
+++ b/templates/service/new.html
@@ -1,9 +1,102 @@
-{% extends 'base/base.html' %}
+{% extends "base/base.html" %}
 
 
 {% block content %}
 
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col-lg-6 col-md-6 col-sm-12 pt-3 pb-3 mt-5 target">
+                <h4 class="mb-4">Publica tú servicio</h4>
 
+                <form method="POST" enctype="multipart/form-data">
+                    {% csrf_token %}
 
-{% endblock content %}
-    
+                    <input type="hidden" name="user" value="{{ user.pk}}" />
+                    <input type="hidden" name="person" value="{{ person.pk }}" />
+
+                    {# Title field #}
+                    <div class="form-group">
+                        <input
+                            class="form-control {% if form.title.errors %}is-invalid{% endif %}"
+                            type="text"
+                            name="title"
+                            placeholder="Title"
+                        >
+                        <div class="invalid-feedback">
+                            {% for error in form.title.errors %}{{ error }}{% endfor %}
+                        </div>
+                    </div>
+
+                    {# Category field #}
+                    <div class="form-group">
+                        <input
+                            class="form-control {% if form.category.errors %}is-invalid{% endif %}"
+                            type="text"
+                            name="category"
+                            placeholder="Category"
+                        >
+                        <div class="invalid-feedback">
+                            {% for error in form.category.errors %}{{ error }}{% endfor %}
+                        </div>
+                    </div>
+
+                    {# Description field #}
+                    <div class="form-group">
+                        <input
+                            class="form-control {% if form.description.errors %}is-invalid{% endif %}"
+                            type="text"
+                            name="description"
+                            placeholder="Description"
+                        >
+                        <div class="invalid-feedback">
+                            {% for error in form.description.errors %}{{ error }}{% endfor %}
+                        </div>
+                    </div>
+                    
+                    {# Direction field #}
+                    <div class="form-group">
+                        <input
+                            class="form-control {% if form.direction.errors %}is-invalid{% endif %}"
+                            type="text"
+                            name="direction"
+                            placeholder="Direction"
+                        >
+                        <div class="invalid-feedback">
+                            {% for error in form.direction.errors %}{{ error }}{% endfor %}
+                        </div>
+                    </div>
+
+                    {# Facebook_Url field #}
+                    <div class="form-group">
+                        <input
+                            class="form-control {% if form.facebook_url.errors %}is-invalid{% endif %}"
+                            type="text"
+                            name="facebook_url"
+                            placeholder="Facebook Url"
+                        >
+                        <div class="invalid-feedback">
+                            {% for error in form.facebook_url.errors %}{{ error }}{% endfor %}
+                        </div>
+                    </div>
+
+                    {# Photo field #}
+                    <div class="form-group">
+                        <label>Elige una Foto:</label>
+                        <input
+                            class="form-control {% if form.picture_logo.errors %}is-invalid{% endif %}"
+                            type="file"
+                            name="picture_logo"
+                            placeholder="photo"
+                        >
+                        <div class="invalid-feedback">
+                            {% for error in form.picture_logo.errors %}{{ error }}{% endfor %}
+                        </div>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary btn-block mt-5">Publicar!</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
