--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -30,12 +30,6 @@
                     <div class="col-sm-4 mt-2">
                         <a href=""><span class="badge badge-pill badge-primary mr-2">12</span> Comentarios</a>
                     </div>
-                    <div class="col-sm-4 mt-2">
-                        <a href="">
-                            <img src="{% static 'img/saludo_nav.png' %}" alt="" style="width: 30px; height: auto;">
-                            Ver Servicios
-                        </a>
-                    </div>
                 </div>
                 <div class="row mt-4 pb-4">
                     <div class="col-sm-12">
@@ -45,7 +39,23 @@
             </div>
         </div>
     </div>
+
+    <hr>
+
+    <div class="container">
+        <div class="row mt-3">
+            {% for service in services %}
+            <div class="col-sm-4 pt-5 pb-5 pr-5 pl-5 d-flex justify-content-center align-items-center">
+                <a href="{% url 'service_detail' service.pk %}" class="border">
+                    <img src="{{ service.picture_logo.url }}" alt="{{ service.title }}" class="img-fluid">
+                </a>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+
 {% endblock %}
 
 {% block footer%}
-{% endblock %}
+{% endblock footer %}
