--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -12,8 +12,26 @@
           <li class="nav">
             <a class="nav-link" href="{% url 'list' %}">Servicios</a>
           </li>
-          <li class="nav">
-            <a class="nav-link" href="">Categorias</a>
+          <li class="nav dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Categorias
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="">Compras y Shopping</a>
+              <a class="dropdown-item" href="">Informática y Electrónica</a>
+              <a class="dropdown-item" href="">Construcción y Contratistas</a>
+              <a class="dropdown-item" href="">Deportes y Recreacción</a>
+              <a class="dropdown-item" href="">Educación</a>
+              <a class="dropdown-item" href="">Hogar y Jardin</a>
+              <a class="dropdown-item" href="">Industria y Agricultura</a>
+              <a class="dropdown-item" href="">Medios de Comunicación</a>
+              <a class="dropdown-item" href="">Servicios Profecionales</a>
+              <a class="dropdown-item" href="">Ropa y Accesorios</a>
+              <a class="dropdown-item" href="">Salud y Medicina</a>
+              <a class="dropdown-item" href="">Servicios Legales y Financieros</a>
+              <a class="dropdown-item" href="">Viajes y Trasportes</a>
+              <a class="dropdown-item" href="">Gastronomia</a>
+            </div>
           </li>
           <li class="nav">
             <a class="nav-link" href="{% url 'create' %}">Publicar</a>
