--- a/templates/service/new.html
+++ b/templates/service/new.html
@@ -62,7 +62,7 @@
                     <div class="form-group">
                         <input
                             class="form-control {% if form.facebook_url.errors %}is-invalid{% endif %}"
-                            type="text"
+                            type="url"
                             name="facebook_url"
                             placeholder="Facebook Url"
                         >
