--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -24,4 +24,9 @@
     background-color: rgb(255, 255, 255);
     border-width: 10em;
     border-radius: 0.5em;
+    box-shadow: 2px 2px 10px #666
+}
+
+footer{
+    background-color: rgb(32, 30, 30);
 }
