--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -23,7 +23,7 @@
 
 {% block footer %}
 <!-- Footer -->
-<footer class="site-footer bg-primary pt-4 pb-4">
+<footer class="site-footer pt-4 pb-4">
   <div class="container">
     <div class="row pt-2 mt-5 text-center text-light">
       <div class="col-md-12">
