--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -35,8 +35,9 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'create' %}">Publicar <img src="{% static 'img/anunciar.png' %}" alt="" width="30" height="30"></a>
+            <a class="nav-link" href="{% url 'create' %}">Publicar</a>
           </li>
+          <img src="{% static 'img/anunciar.png' %}" alt="" width="35" height="35">
         {% endif %}
         </ul>
         <form class="form-inline my-2 my-lg-0">
