--- a/templates/service/new.html
+++ b/templates/service/new.html
@@ -20,7 +20,7 @@
                             class="form-control {% if form.title.errors %}is-invalid{% endif %}"
                             type="text"
                             name="title"
-                            placeholder="Title"
+                            placeholder="Añade un Titulo"
                         >
                         <div class="invalid-feedback">
                             {% for error in form.title.errors %}{{ error }}{% endfor %}
@@ -38,7 +38,7 @@
                             class="form-control {% if form.description.errors %}is-invalid{% endif %}"
                             type="text"
                             name="description"
-                            placeholder="Description"
+                            placeholder="Describe tú servicio"
                         >
                         <div class="invalid-feedback">
                             {% for error in form.description.errors %}{{ error }}{% endfor %}
@@ -51,7 +51,7 @@
                             class="form-control {% if form.direction.errors %}is-invalid{% endif %}"
                             type="text"
                             name="direction"
-                            placeholder="Direction"
+                            placeholder="Dirección comercial"
                         >
                         <div class="invalid-feedback">
                             {% for error in form.direction.errors %}{{ error }}{% endfor %}
@@ -64,7 +64,7 @@
                             class="form-control {% if form.facebook_url.errors %}is-invalid{% endif %}"
                             type="url"
                             name="facebook_url"
-                            placeholder="Facebook Url"
+                            placeholder="URL de Facebook"
                         >
                         <div class="invalid-feedback">
                             {% for error in form.facebook_url.errors %}{{ error }}{% endfor %}
