--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -9,7 +9,7 @@
             <span class="badge badge-secondary">{{service.direction}}</span>
             <a class="" href="{{service.facebook_url}}">Facebook</a>
         </div>
-        <a href="" data-toggle="modal" data-target="#exampleModal"  class="mb-3 float-right">
+        <a href=""  class="mb-3 float-right">
             <img src="{% static 'img/con.png' %}" alt="" width="40" height="40" class="color-expand">
         </a>
     </div>
@@ -44,6 +44,4 @@
 </div>
 
 {% include 'service/image_modal.html' %}
-
-{% include "service/new_message.html" %}
 
