--- a/templates/user/new_message.html
+++ b/templates/user/new_message.html
@@ -1,47 +1,40 @@
 {% load static %}
-
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Enviar mensaje a <code>{{user.username}} </code>de <code>{{request.user.username}}</code></h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-                       <form method="POST" action="{% url 'message' %}">
+                       <form method="POST" action="">
                     {% csrf_token %}
 
-                    <input type="hidden" name="author" value="{{ person.pk }}" />
-                    <input type="hidden" name="user" value="{{ service.person.pk }}" />
-                    <input type="hidden" name="person" value="{{ service.user.pk }}" />
+                    <input type="hidden" name="author" value="{{ request.user.person.pk }}" />
+                    <input type="hidden" name="user" value="{{ user.person.pk }}" />
+                    <input type="hidden" name="person" value="{{ user.pk }}" />
 
                     {# Title field #}
                     <div class="form-group">
                         <input
-                            class="form-control {% if form.title.errors %}is-invalid{% endif %}"
+                            class="form-control"
                             type="text"
                             name="title"
                             placeholder="Titulo del mensaje"
                         >
-                        <div class="invalid-feedback">
-                            {% for error in form.title.errors %}{{ error }}{% endfor %}
-                        </div>
                     </div>
 
                     {# Body field #}
                     <div class="form-group">
                         <input
-                            class="form-control {% if form.body.errors %}is-invalid{% endif %}"
+                            class="form-control"
                             type="textfield"
                             name="body"
                             placeholder="Escribe un mensaje"
                         >
-                        <div class="invalid-feedback">
-                            {% for error in form.body.errors %}{{ error }}{% endfor %}
-                        </div>
                     </div>
 
                     <button type="submit" class="btn btn-primary btn-block mt-5">Enviar!</button>
