--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -1,17 +1,20 @@
 {% load static %}
-<div class="col-lg-4 col-sm-8 offset-lg-4 mb-3 pt-4 target">
+<div class="col-lg-4 col-sm-8 offset-lg-4 mb-3 pt-4 target" id ='none{{service.title}}'>
     <div class="media">
         <a href="{% url 'detail' service.user.username %}">
             <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
         </a>
         <div class="media-body">
             <h5 class="mt-0">@{{service.user.username}}</h5>
-            <span class="badge badge-secondary">{{service.direction}}</span>
-            <a class="" href="{{service.facebook_url}}">Facebook</a>
+            <h6 class="ml-0 mt-1">{{service.title}}</h6>
         </div>
-        <a href=""  class="mb-3 float-right">
-            <img src="{% static 'img/con.png' %}" alt="" width="40" height="40" class="color-expand">
+        
+        {% if service.facebook_url %}
+        <a href="{{service.facebook_url}}"  class="mb-3 float-right">
+            <img src="{% static 'img/facebook.png' %}" alt="" width="30" height="30" class="color-expand">
         </a>
+        {% endif %}
+            
     </div>
     {% if service.picture_logo %}
     <a href="" data-toggle="modal" data-target="#{{service.user.username}}">
@@ -19,8 +22,12 @@
     </a>
     
     {% endif %}
-    <h5 class="ml-0 mt-1">{{service.title}}</h5>
-    <p class="ml-0 mt-0">{{service.description}}</p>
+    <p class="mt-1 mb-0 text-primary">{{service.description}}</p>
+    <form class="form-inline">
+        {% if service.direction %}
+        <img src="{% static 'img/sitio.png'%}" alt="" width="20" height="20" class=" mr-2"><p class="mt-0 mb-1 text-secondary">{{service.direction}}</p>
+        {% endif %}
+    </form>
     <span class="badge ml-0 mt-0">{{service.created}}</span>
     <div class="mt-0 mb-3">
         <hr>
@@ -40,8 +47,12 @@
 
         <a type="button" class="like" name='{{service.id}}'><img src="{% static 'img/estrella.png' %}" alt="" width="30" height="30"class="color-expand mb-1 mr-2"></a>
         <span class="badge badge-pill mb-2 p-2 text-light d-inline mt-0" style="background-color: rgb(255, 192, 31);"><strong id ='service{{service.id}}'>{{service.liked.all.count}}</strong> Estrellas</span>
+        {% if service.user == request.user %}
+        <a type="button" class="mb-3 float-right ml-3 eliminar" name='{{service.id}}'>
+            <img src="{% static 'img/eliminar.png' %}" alt="" width="30" height="30" class="color-expand">
+        </a>
+        {% endif %}
     </div>
 </div>
-
 {% include 'service/image_modal.html' %}
 
