--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -24,11 +24,16 @@
                     {% endif %}
                 </h4>
                 <div class="row mt-2" style="font-size: 1.2em;">
-                    <div class="col-sm-4">
-                        <span class="badge badge-pill badge-primary mr-2">12</span><img src="{% static 'img/corazon.png' %}" alt="" width="15" height="auto">
+                    <div class="col-sm-4 mt-2">
+                        <p>Tel: <strong class="text-primary mr-2">{{user.person.phone_number}}</strong></p>
                     </div>
                     <div class="col-sm-4 mt-2">
-                        <a href="" data-toggle="modal" data-target="#exampleModal"><span class="badge badge-pill badge-primary mr-2">12</span> Comentarios</a>
+                        
+                        {% if services %}
+                        <p>Servicios <span class="badge badge-pill badge-primary mr-2">{{services.count}}</span></p>
+                        {% endif %}
+                            
+                        
                     </div>
                 </div>
                 <div class="row mt-4 pb-4">
@@ -45,16 +50,18 @@
     <div class="container">
         <div class="row mt-3">
             {% for service in services %}
-            <div class="col-sm-4 pt-5 pb-5 pr-5 pl-5 d-flex justify-content-center align-items-center">
+            <div class="col-sm-4 pt-5 pb-5 pr-5 pl-5 d-block justify-content-center align-items-center" id="cont">
                 <a href="{% url 'service_detail' service.pk %}" class="border">
                     <img src="{{ service.picture_logo.url }}" alt="{{ service.title }}" class="img-fluid">
                 </a>
+                <div class="">
+                    <p class="text-primary">{{service.title}}</p>
+                </div>
             </div>
             {% endfor %}
         </div>
     </div>
 
-{% include "user/new_message.html" %}
 {% endblock %}
 
 
