--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -16,14 +16,12 @@
 <body class="body">
   <!-- Facebook -->
   {% block nav %}
-
   {% endblock nav%}
 
   {% block content %}
-  {% endblock content %}
+  {% endblock %}
 
   {% block footer %}
-
   {% endblock %}
 
   
