--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -6,8 +6,25 @@
 
 
 {% block content %}
-    <div class="container mt-5 mb-5">
+    <div class="container mt-2 mb-2">
         <div class="row">
+            <div class=" d-none d-lg-block d-md-block" style="position: fixed; width: 18%; height: auto;">
+                <div class="media">
+                    <div class="media-body">
+                        <img src="{% static 'img/publicidad.png' %}" alt="" width="100%" height="auto">
+                    </div>
+                </div>
+                <div class="media pt-4">
+                    <div class="media-body">
+                        <img src="{% static 'img/publicidad.png' %}" alt="" width="100%" height="auto">
+                    </div>
+                </div>
+                <div class="media pt-4">
+                    <div class="media-body">
+                        <img src="{% static 'img/publicidad.png' %}" alt="" width="100%" height="auto">
+                    </div>
+                </div>
+            </div>
             {% for service in service %}
                 {% include 'service/service_card.html' %}
             {% endfor %}
