--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg  navbar-dark bg-primary sticky-top">
     <div class="container">
-      <a href="{%url 'index'%}" class="navbar-brand mr-5"> CONTACTAME
+      <a href="{%url 'index'%}" class="navbar-brand mr-5"> MIS SERVICIOS
         <img src="{% static 'img/contacto.png' %}" alt="" style="width: 50px; height: auto;"></a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
