--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -7,17 +7,105 @@
 
 {% block content %}
 
-<div class="container-fluid">
-  <div class="row justify-content-md-center" style="height: 900px;">
-    <div class="col work text-center" style="height: 100%;">
-      <h2 class="mt-5 mb-4 font-weight-bolder text-uppercase text-light">Publica y busca servicios en nuestra plataforma.</h2>
-      <h4 class="text-light">Encontraras a los mejores de cada categoria.</h4>
-      <dir class="media justify-content-md-center mt-5">
-        <img src="{% static 'img/servicio.png' %}" alt="" width="300" height="auto">
-      </dir>
+<div class="container-fluid work">
+  <div class="row justify-content-md-center" style="height: 650px;">
+    <div class="container" style="height: 100%;">
+      <h2 class="mt-5 mb-4 font-weight-bolder text-light text-center">Publica y busca servicios en nuestra plataforma.</h2>
+      <div class="row">
+        <div class="col-lg-6 mt-2 col-sm-12">
+          <h5 class="text-light mb-3 mt-3 font-italic ">
+            Encuentra clientes que te requieran de una manera sencilla y totalmente gratis!
+            Si tenés un oficio o sos bueno haciendo algo, podés publicarlo en este espacio diseñado para vos!
+          </h5>
+          <h5 class="text-light font-italic">
+            ¿Necesitas emplear un servicio y no sabes donde buscar?
+            Aquí encontrarás a los mejores por categoria, pueden estár a la vuelta de tu casa!
+          </h5>
+        </div>
+        <div class="col-lg-4 mt-sm-1 ml-lg-4 col-sm-12">
+          <img src="{% static 'img/perfil.png' %}" alt="" width="350" height="auto" style="border-radius: 15px;">
+        </div>
+      </div>
     </div>
   </div>
 </div>
+<div class="container">
+  <div class="row pt-3 pb-3 mt-4 mb-4">
+    <div class="col-lg-4 mt-2 mb-2">
+      <h5 class='text-dark'>
+        <img src="{% static 'img/entrar.png' %}" alt="" width="40" height="auto" class="mr-2"> Registrarse es facil, solo necesitas un alias, tu email y tu nombre y apellido. 
+        Una vez registrado ingresa con el nombre de usuario que elegiste y tu contraseña.
+      </h5>
+    </div>
+    <div class="col-lg-4 mt-2 mb-2">
+      <h5 class='text-dark'>
+        <img src="{% static 'img/service.png' %}" alt="" width="40" height="auto" class="mr-2"> Es importante que detalles lo que ofreces para que los demás usuarios
+        puedan encontrarte rapidamente, ademas mostrar lo que haces con una foto es mucho mejor.
+      </h5>
+    </div>
+    <div class="col-lg-4 mt-2 mb-2">
+      <h5 class='text-dark'>
+        <img src="{% static 'img/star.png' %}" alt="" width="40" height="auto" class="mr-2"> Si conoces y contrataste algunos de estos servicios, 
+        podés clasificarlos con las estrellas, 
+        es importante para el usuario que lo ofrece y para recomendarlo a los demás.
+      </h5>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <hr>
+  <div class="row justify-content-center">
+    <h3 class="font-italic text-dark mt-2 ml-lg-4">Elegí lo mejor de siempre en Tinogasta</h3>
+    <div class="col-12 pt-2 mt-4">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="{% static 'img/publi.gif' %}" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="{% static 'img/publi.gif' %}" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="{% static 'img/publi.gif' %}" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid" style="background-color: rgb(34, 29, 65);">
+<div class="row mt-5 pt-5 pb-5">
+  <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
+    <h3 style="color: white;">Mis Servicios en Tinogasta</h3>
+    <p>logo</p>
+  </div>
+  <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
+    <h3 style="color: white;">Municipalidad de Tinogasta</h3>
+    <p>logo</p>
+  </div>
+  <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
+    <h3 style="color: white;">Contacto</h3>
+    <form class="form-block pt-2 pb-2" action="">
+      <a class="btn btn-outline-success m-2"  href="">Tu Publicidad en Mis Servicios</a>
+    </form>
+  </div>
+</div>
+</div>
+
+
 
 {% endblock%}
 
@@ -28,7 +116,7 @@
     <div class="row pt-2 mt-5 text-center text-light">
       <div class="col-md-12">
         <p>
-        Copyright&copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  Departamento de Informática
+        Copyright&copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |  Municipalidad de Tinogasta
         </p>
       </div>
     </div>
