--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -52,7 +52,7 @@
                 </div>
               
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Registraté</button> 
-                <p class="mt-5 mb-3 text-muted text-center">&copy; Departamento de Informática <script>document.write(new Date().getFullYear());</script></p>
+                <p class="mt-5 mb-3 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
               </form>
         </div>
     </div>
