--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -65,13 +65,13 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="{% static 'img/publi.gif' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/pub-slider.jpg' %}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'img/publi.gif' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/pub-slider.jpg' %}" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="{% static 'img/publi.gif' %}" class="d-block w-100" alt="...">
+            <img src="{% static 'img/pub-slider.jpg' %}" class="d-block w-100" alt="...">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -89,17 +89,17 @@
 <div class="container-fluid" style="background-color: rgb(34, 29, 65);">
 <div class="row mt-5 pt-5 pb-5">
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
-    <h3 style="color: white;">Mis Servicios en Tinogasta</h3>
-    <p>logo</p>
+    <h3 style="color: white;">Trato Hecho</h3>
+    <img class="mr-2" src="{% static 'img/contacto.png' %}" alt="" style="width: 100px; height: auto;">
   </div>
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
     <h3 style="color: white;">Municipalidad de Tinogasta</h3>
-    <p>logo</p>
+    <img class="mr-2" src="{% static 'img/muni.png' %}" alt="" style="width: 100px; height: auto;">
   </div>
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
     <h3 style="color: white;">Contacto</h3>
     <form class="form-block pt-2 pb-2" action="">
-      <a class="btn btn-outline-success m-2"  href="">Tu Publicidad en Mis Servicios</a>
+      <a class="btn btn-outline-success m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
     </form>
   </div>
 </div>
