--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -1,4 +1,8 @@
 {% extends "base/base.html" %}
+{% block nav %}
+    {% include 'base/navbar.html' %}
+{% endblock nav %}
+
 {% load static%}
 {% block content %}
 <div class="container pt-4 pb-4">
