--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -3,7 +3,7 @@
 <head>
   
   {% block head %}
-    <title>Contactame | Tinogasta</title>
+    <title>Trato hecho | Tinogasta</title>
   {% endblock %}
   
   {% load static %}
