--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -21,6 +21,13 @@
                 </div>
                 <p class="mt-2 mb-2 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
             </div>
+            <div class="col-sm-12 d-lg-none d-md-none">
+                <div class="media pt-2 pb-2">
+                    <div class="media-body">
+                        <img src="{% static 'img/publicidad.png' %}" alt="" width="100%" height="auto">
+                    </div>
+                </div>
+            </div>
             {% for service in service %}
                 {% include 'service/service_card.html' %}
             {% endfor %}
