--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="col-lg-4 col-sm-8 offset-lg-4 mb-3 pt-4 target" id ='none{{service.title}}'>
+<div class="col-lg-4 col-sm-8 offset-md-2 offset-lg-4 mb-3 pt-4 target" id ='none{{service.title}}'>
     <div class="media">
         <a href="{% url 'detail' service.user.username %}">
             <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
