--- a/templates/registration/password_reset_confirms.html
+++ b/templates/registration/password_reset_confirms.html
@@ -15,7 +15,7 @@
                 {% csrf_token %}
                 <div class="form-group">
                     {{form.new_password1.errors}}
-                    <label for="id_new_password1">Nueva contrasela</label>
+                    <label for="id_new_password1">Nueva contraseña</label>
                     {{form.new_password1}}
                 </div>
 
