--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 Solicitaste reestablecimiento de contraseña.
-Click en el siguiente link para crear una nueva contraseña.
+Click en el siguiente link para crear una nueva.
 {% block reset_link %}
 {{ protocol }}://{{domain}}{% url 'password_reset_confirm' uidb64=uid token=token %}
 {% endblock %}
