--- a/templates/service/search.html
+++ b/templates/service/search.html
@@ -1,4 +1,8 @@
 {% extends 'base/base.html' %}
+{% block head %}
+<title>Search</title>
+{% endblock %}
+  
 {% load static %}
 {% block nav %}
     {% include 'base/navbar.html' %}
