--- a/templates/user/log_in.html
+++ b/templates/user/log_in.html
@@ -1,4 +1,9 @@
 {% extends "base/base.html" %}
+
+{% block head %}
+<title>Login</title>
+{% endblock %}
+  
 {% block nav %}
     {% include 'base/navbar.html' %}
 {% endblock nav %}
