--- a/templates/user/update_person.html
+++ b/templates/user/update_person.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
-
+{% block head %}
+<title>Update {{user.username}}</title>
+{% endblock %}
+  
 {% load static %}
 
 
