--- a/templates/service/contact.html
+++ b/templates/service/contact.html
@@ -1,5 +1,8 @@
 {% extends "base/base.html" %}
-
+{% block head %}
+<title>Contact</title>
+{% endblock %}
+  
 {% block content %}
 {% load static %}
 <div class="container pt-4 pb-4">
