--- a/templates/service/detail.html
+++ b/templates/service/detail.html
@@ -1,5 +1,8 @@
 {% extends 'base/base.html' %}
-
+{% block head %}
+<title>Service {{service.user.username}}</title>
+{% endblock %}
+  
 {% load static %}
 
 {% block content %}
