--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -1,4 +1,8 @@
 {% extends 'base/base.html' %}
+{% block head %}
+<title>List service</title>
+{% endblock %}
+  
 {% load static %}
 {% block nav %}
     {% include 'base/navbar.html' %}
