--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -1,4 +1,8 @@
 {% extends 'base/base.html' %}
+{% block head %}
+<title>Detail {{user.username}}</title>
+{% endblock %}
+  
 {% load static %}
 
 
