--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -1,4 +1,8 @@
 {% extends "base/base.html" %}
+{% block head %}
+<title>Sign up</title>
+{% endblock %}
+  
 {% block nav %}
     {% include 'base/navbar.html' %}
 {% endblock nav %}
