--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -29,10 +29,10 @@
                 </h4>
                 <div class="row mt-2" style="font-size: 1.2em;">
                     <div class="col-sm-4 mt-2">
-                        <p>Tel: <strong class="text-primary mr-2">{{user.person.phone_number}}</strong></p>
+                        <p>Tel: <strong class="text-primary">{{user.person.phone_number}}</strong></p>
                     </div>
-                    <div class="col-sm-4 mt-2">
-                        <a href="https://api.whatsapp.com/send?phone=+54{{user.person.phone_number}}&text=mensaje">Whatsapp<img class="ml-2" src="{% static 'img/whatsapp.png' %}" alt="" width="30" height="30"></a>
+                    <div class="col-sm-4 mb-2 mt-2">
+                        <a href="https://api.whatsapp.com/send?phone=+54{{user.person.phone_number}}&text=Hola {{user.first_name}}! ">Enviar un Whatsapp<img class="ml-2" src="{% static 'img/whatsapp.png' %}" alt="" width="30" height="30"></a>
                     </div>
                     <div class="col-sm-4 mt-2">
                         {% if services %}
