--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -58,8 +58,8 @@
             </ul>
           </div>
         {% else %}
-          <a class="nav-item float-lg-right btn btn-outline-success mr-2" href="{%url 'sign_up'%}">Registrate</a>
-          <a class="nav-item float-lg-right btn btn-outline-success mr-2" href="{%url 'log_in'%}">Ingresar</a>
+          <a class="nav-item float-lg-right btn btn-outline-secondary mr-2" href="{%url 'sign_up'%}">Registrate</a>
+          <a class="nav-item float-lg-right btn btn-outline-secondary mr-2" href="{%url 'log_in'%}">Ingresar</a>
         {% endif %}
       </form>
       </div>
