--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -99,7 +99,7 @@
   <div class="col-lg-4 col-sm-12 text-center mb-2 mt-2">
     <h3 style="color: white;">Contacto</h3>
     <form class="form-block pt-2 pb-2" action="">
-      <a class="btn btn-outline-success m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
+      <a class="btn btn-outline-secondary m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
     </form>
   </div>
 </div>
