--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -62,7 +62,7 @@
         success: function(response) {
             alert('servicio eliminado de '+response.user + " "+ response.title);
             var id = response.title;
-            $("#none"+id).addClass('d-none')
+            $("#none"+id).hide(1000)
 
         },
         error: function(rs, e) {
