--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -37,3 +37,69 @@ footer{
     display: block;
 } 
 
+/*CARGANDO*/
+.loader {
+    font-size: 20px;
+    margin: 45% auto;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-animation: load4 1.3s infinite linear;
+    animation: load4 1.3s infinite linear;
+  }
+  @-webkit-keyframes load4 {
+    0%,
+    100% {
+      box-shadow: 0em -3em 0em 0.2em #1f8ca7, 2em -2em 0 0em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 0em #1f8ca7;
+    }
+    12.5% {
+      box-shadow: 0em -3em 0em 0em #1f8ca7, 2em -2em 0 0.2em #1f8ca7, 3em 0em 0 0em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    25% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 0em #1f8ca7, 3em 0em 0 0.2em #1f8ca7, 2em 2em 0 0em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    37.5% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 0em #1f8ca7, 2em 2em 0 0.2em #1f8ca7, 0em 3em 0 0em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    50% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 0em #1f8ca7, 0em 3em 0 0.2em #1f8ca7, -2em 2em 0 0em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    62.5% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 0em #1f8ca7, -2em 2em 0 0.2em #1f8ca7, -3em 0em 0 0em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    75% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 0em #1f8ca7, -3em 0em 0 0.2em #1f8ca7, -2em -2em 0 0em #1f8ca7;
+    }
+    87.5% {
+      box-shadow: 0em -3em 0em 0em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 0em #1f8ca7, -3em 0em 0 0em #1f8ca7, -2em -2em 0 0.2em #1f8ca7;
+    }
+  }
+  @keyframes load4 {
+    0%,
+    100% {
+      box-shadow: 0em -3em 0em 0.2em #1f8ca7, 2em -2em 0 0em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 0em #1f8ca7;
+    }
+    12.5% {
+      box-shadow: 0em -3em 0em 0em #1f8ca7, 2em -2em 0 0.2em #1f8ca7, 3em 0em 0 0em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    25% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 0em #1f8ca7, 3em 0em 0 0.2em #1f8ca7, 2em 2em 0 0em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    37.5% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 0em #1f8ca7, 2em 2em 0 0.2em #1f8ca7, 0em 3em 0 0em #1f8ca7, -2em 2em 0 -0.5em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    50% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 0em #1f8ca7, 0em 3em 0 0.2em #1f8ca7, -2em 2em 0 0em #1f8ca7, -3em 0em 0 -0.5em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    62.5% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 0em #1f8ca7, -2em 2em 0 0.2em #1f8ca7, -3em 0em 0 0em #1f8ca7, -2em -2em 0 -0.5em #1f8ca7;
+    }
+    75% {
+      box-shadow: 0em -3em 0em -0.5em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 0em #1f8ca7, -3em 0em 0 0.2em #1f8ca7, -2em -2em 0 0em #1f8ca7;
+    }
+    87.5% {
+      box-shadow: 0em -3em 0em 0em #1f8ca7, 2em -2em 0 -0.5em #1f8ca7, 3em 0em 0 -0.5em #1f8ca7, 2em 2em 0 -0.5em #1f8ca7, 0em 3em 0 -0.5em #1f8ca7, -2em 2em 0 0em #1f8ca7, -3em 0em 0 0em #1f8ca7, -2em -2em 0 0.2em #1f8ca7;
+    }
+  }
